fix contrast for fame categories by changing images to a background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,25 +140,25 @@
     height: 200px;
     width: 100%;
     padding-left: 30px;
-    background: url("../images/wealth.jpg");
+    background-color:#3a3a3a;
    }
    .reign{
     height: 200px;
     width: 100%;
     padding-left: 30px;
-    background: url("../images/reign.jpg");
+    background-color: #23bbbb;
    }
    .achievements{
     height: 200px;
     width: 100%;
     padding-left: 30px;
-    background: url("../images/achievements.jpg");
+    background-color: #f4b940;
    }
    .education{
     height: 200px;
     width: 100%;
     padding-left: 30px;
-    background: url("../images/education.png");
+    background-color:#459edd;
    }
 
    #fame-categories h3 {
@@ -184,7 +184,7 @@
    }
 
    .education li {
-    color: black;
+    color: white;
     font-size: 20px;
    }
 
@@ -254,14 +254,8 @@
     height: 900px;
    }
 
-   #presidents{
-    background: transparent;
-    color: #fafafa;
-    width:100%;
-    height:25px;
-    margin:5px 0 20px 0;
-    border: 1px solid #fafafa;
-    border-radius: 2px;
-
+   #vote h3{
+    text-align: center;
+    font-size: 150%;
    }
 
